@@ -109,6 +109,53 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         jsonSchemaValidationService.validateOrError(body, GET_DRAFT_ACCOUNT_RESPONSE);
     }
 
+
+    @Test
+    @DisplayName("Get Draft Account by ID PDPL Logging")
+    void testGetDraftAccountById_PdplLogging() throws Exception {
+        when(userStateService.checkForAuthorisedUser(any())).thenReturn(
+            permissionUser((short)78, FinesPermission.CREATE_MANAGE_DRAFT_ACCOUNTS,
+                FinesPermission.CHECK_VALIDATE_DRAFT_ACCOUNTS));
+        when(loggingService.personalDataAccessLogAsync(any())).thenReturn(true);
+
+        ResultActions resultActions = mockMvc.perform(get(URL_BASE + "/5")
+            .header("authorization", "Bearer some_value")
+            .header("X-User-IP", "192.168.1.100")
+            .contentType(MediaType.APPLICATION_JSON));
+
+        resultActions.andExpect(status().isOk())
+            .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON));
+
+        ArgumentCaptor<PersonalDataProcessingLogDetails> captor =
+            ArgumentCaptor.forClass(PersonalDataProcessingLogDetails.class);
+
+        verify(loggingService, times(2)).personalDataAccessLogAsync(captor.capture());
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
+
+        assertEquals(2, logs.size());
+
+        PersonalDataProcessingLogDetails first = logs.get(0);
+        assertEquals("Get Draft Account - Parent or Guardian", first.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, first.getCategory());
+        assertEquals("1", first.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, first.getCreatedBy().getType());
+        assertEquals("192.168.1.100", first.getIpAddress());
+        assertEquals(1, first.getIndividuals().size());
+        assertEquals("5", first.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, first.getIndividuals().get(0).getType());
+
+        PersonalDataProcessingLogDetails second = logs.get(1);
+        assertEquals("Get Draft Account - Defendant", second.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, second.getCategory());
+        assertEquals("1", second.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, second.getCreatedBy().getType());
+        assertEquals("192.168.1.100", second.getIpAddress());
+        assertEquals(1, second.getIndividuals().size());
+        assertEquals("5", second.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, second.getIndividuals().get(0).getType());
+    }
+
+
     @Test
     @DisplayName("Get draft accounts summaries - No query params [@PO-973, @PO-606]")
     void testGetDraftAccountsSummaries_noParams() throws Exception {
@@ -132,6 +179,72 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
             .andExpect(jsonPath("$.summaries[2].account_status").value("Publishing Failed"));
 
         jsonSchemaValidationService.validateOrError(body, GET_DRAFT_ACCOUNTS_RESPONSE);
+    }
+
+    @Test
+    @DisplayName("Get draft accounts - Should return list and call PDPLLoggingService")
+    void testGetDraftAccounts_success_and_pdplServiceCalled() throws Exception {
+        when(userStateService.checkForAuthorisedUser(any())).thenReturn(
+            permissionUser((short) 78, FinesPermission.CREATE_MANAGE_DRAFT_ACCOUNTS,
+                FinesPermission.CHECK_VALIDATE_DRAFT_ACCOUNTS));
+        when(loggingService.personalDataAccessLogAsync(any())).thenReturn(true);
+
+        ResultActions resultActions = mockMvc.perform(get(URL_BASE)
+            .header("authorization", "Bearer some_value")
+            .header("X-User-IP", "192.168.1.100")
+            .contentType(MediaType.APPLICATION_JSON));
+
+        resultActions.andExpect(status().isOk())
+            .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON));
+
+        ArgumentCaptor<PersonalDataProcessingLogDetails> captor = ArgumentCaptor.forClass(
+            PersonalDataProcessingLogDetails.class);
+
+        verify(loggingService, times(4)).personalDataAccessLogAsync(captor.capture());
+
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
+
+        assertEquals(4, logs.size());
+
+        PersonalDataProcessingLogDetails l0 = logs.get(0);
+        assertEquals("Get Draft Account - Parent or Guardian", l0.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l0.getCategory());
+        assertEquals("1", l0.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l0.getCreatedBy().getType());
+        assertNotNull(l0.getIpAddress());
+        assertEquals(1, l0.getIndividuals().size());
+        assertEquals("5", l0.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l0.getIndividuals().get(0).getType());
+
+        PersonalDataProcessingLogDetails l1 = logs.get(1);
+        assertEquals("Get Draft Account - Defendant", l1.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l1.getCategory());
+        assertEquals("1", l1.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l1.getCreatedBy().getType());
+        assertNotNull(l1.getIpAddress());
+        assertEquals(1, l1.getIndividuals().size());
+        assertEquals("5", l1.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l1.getIndividuals().get(0).getType());
+
+        PersonalDataProcessingLogDetails l2 = logs.get(2);
+        assertEquals("Get Draft Account - Defendant", l2.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l2.getCategory());
+        assertEquals("1", l2.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l2.getCreatedBy().getType());
+        assertNotNull(l2.getIpAddress());
+        assertEquals(1, l2.getIndividuals().size());
+        assertEquals("201", l2.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l2.getIndividuals().get(0).getType());
+
+        PersonalDataProcessingLogDetails l3 = logs.get(3);
+        assertEquals("Get Draft Account - Minor Creditor", l3.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l3.getCategory());
+        assertEquals("1", l3.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l3.getCreatedBy().getType());
+        assertNotNull(l3.getIpAddress());
+        assertEquals(1, l3.getIndividuals().size());
+        assertEquals("201", l3.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l3.getIndividuals().get(0).getType());
     }
 
     @Test
@@ -439,48 +552,84 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
                 FinesPermission.CHECK_VALIDATE_DRAFT_ACCOUNTS));
         when(loggingService.personalDataAccessLogAsync(any())).thenReturn(true);
 
-        final OffsetDateTime before = OffsetDateTime.now();
         String ifMatch = getIfMatchForDraftAccount(5L);
         ResultActions resultActions = mockMvc.perform(put(URL_BASE + "/5")
             .header("authorization", "Bearer some_value")
             .header("If-Match", ifMatch)
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validRequestBody));
-        final OffsetDateTime after = OffsetDateTime.now();
 
         resultActions.andExpect(status().isOk())
             .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON));
 
         ArgumentCaptor<PersonalDataProcessingLogDetails> captor = ArgumentCaptor.forClass(
             PersonalDataProcessingLogDetails.class);
-        verify(loggingService, times(3)).personalDataAccessLogAsync(captor.capture());
+        verify(loggingService, times(5)).personalDataAccessLogAsync(captor.capture());
 
-        List<PersonalDataProcessingLogDetails> calls = captor.getAllValues();
-        assertEquals(3, calls.size());
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        List<String> businessIdentifiers = calls.stream()
-            .map(PersonalDataProcessingLogDetails::getBusinessIdentifier)
-            .toList();
+        assertEquals(5, logs.size());
 
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Parent or Guardian"));
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Defendant"));
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Minor Creditor"));
+        PersonalDataProcessingLogDetails l0 = logs.get(0);
+        assertEquals("Get Draft Account - Defendant", l0.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l0.getCategory());
+        assertEquals("1", l0.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l0.getCreatedBy().getType());
+        assertNull(l0.getIpAddress());
+        assertNull(l0.getRecipient());
+        assertEquals(1, l0.getIndividuals().size());
+        assertEquals("5", l0.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l0.getIndividuals().get(0).getType());
+        assertNotNull(l0.getCreatedAt());
 
-        calls.forEach(pdpl -> {
-            assertNotNull(pdpl.getCreatedBy());
-            assertEquals("BUUID1", pdpl.getCreatedBy().getIdentifier());
-            assertEquals(PdplIdentifierType.OPAL_USER_ID, pdpl.getCreatedBy().getType());
+        PersonalDataProcessingLogDetails l1 = logs.get(1);
+        assertEquals("Get Draft Account - Minor Creditor", l1.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l1.getCategory());
+        assertEquals("1", l1.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l1.getCreatedBy().getType());
+        assertNull(l1.getIpAddress());
+        assertNull(l1.getRecipient());
+        assertEquals(1, l1.getIndividuals().size());
+        assertEquals("5", l1.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l1.getIndividuals().get(0).getType());
+        assertNotNull(l1.getCreatedAt());
 
-            OffsetDateTime createdAt = pdpl.getCreatedAt();
-            assertNotNull(createdAt);
-            assertTrue(!createdAt.isBefore(before.minusSeconds(5)) && !createdAt.isAfter(after.plusSeconds(5)));
+        PersonalDataProcessingLogDetails l2 = logs.get(2);
+        assertEquals("Update Draft Account - Parent or Guardian", l2.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l2.getCategory());
+        assertEquals("1", l2.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l2.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l2.getIpAddress());
+        assertNull(l2.getRecipient());
+        assertEquals(1, l2.getIndividuals().size());
+        assertEquals("5", l2.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l2.getIndividuals().get(0).getType());
+        assertNotNull(l2.getCreatedAt());
 
-            assertEquals(PersonalDataProcessingCategory.COLLECTION, pdpl.getCategory());
-            assertNull(pdpl.getRecipient());
-            assertEquals(1, pdpl.getIndividuals().size());
-            assertEquals("5", pdpl.getIndividuals().getFirst().getIdentifier());
-            assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, pdpl.getIndividuals().getFirst().getType());
-        });
+        PersonalDataProcessingLogDetails l3 = logs.get(3);
+        assertEquals("Update Draft Account - Defendant", l3.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l3.getCategory());
+        assertEquals("1", l3.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l3.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l3.getIpAddress());
+        assertNull(l3.getRecipient());
+        assertEquals(1, l3.getIndividuals().size());
+        assertEquals("5", l3.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l3.getIndividuals().get(0).getType());
+        assertNotNull(l3.getCreatedAt());
+
+        PersonalDataProcessingLogDetails l4 = logs.get(4);
+        assertEquals("Update Draft Account - Minor Creditor", l4.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l4.getCategory());
+        assertEquals("1", l4.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l4.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l4.getIpAddress());
+        assertNull(l4.getRecipient());
+        assertEquals(1, l4.getIndividuals().size());
+        assertEquals("5", l4.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l4.getIndividuals().get(0).getType());
+        assertNotNull(l4.getCreatedAt());
     }
 
     @Test
@@ -497,6 +646,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(put(URL_BASE + "/5")
             .header("authorization", "Bearer some_value")
             .header("If-Match", ifMatch)
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validRequestBody));
         final OffsetDateTime after = OffsetDateTime.now();
@@ -517,7 +667,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, pdpl.getIndividuals().getFirst().getType());
 
         assertNotNull(pdpl.getCreatedBy());
-        assertEquals("BUUID1", pdpl.getCreatedBy().getIdentifier());
+        assertEquals("1", pdpl.getCreatedBy().getIdentifier());
         assertEquals(PdplIdentifierType.OPAL_USER_ID, pdpl.getCreatedBy().getType());
 
         OffsetDateTime createdAt = pdpl.getCreatedAt();
@@ -539,6 +689,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(put(URL_BASE + "/5")
             .header("authorization", "Bearer some_value")
             .header("If-Match", ifMatch)
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validRequestBody));
         final OffsetDateTime after = OffsetDateTime.now();
@@ -548,31 +699,48 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
 
         ArgumentCaptor<PersonalDataProcessingLogDetails> captor = ArgumentCaptor.forClass(
             PersonalDataProcessingLogDetails.class);
-        verify(loggingService, times(2)).personalDataAccessLogAsync(captor.capture());
+        verify(loggingService, times(3)).personalDataAccessLogAsync(captor.capture());
 
-        List<PersonalDataProcessingLogDetails> calls = captor.getAllValues();
-        List<String> businessIdentifiers = calls.stream()
-            .map(PersonalDataProcessingLogDetails::getBusinessIdentifier)
-            .toList();
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Parent or Guardian"));
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Defendant"));
+        assertEquals(3, logs.size());
 
-        calls.forEach(pdpl -> {
-            assertEquals(PersonalDataProcessingCategory.COLLECTION, pdpl.getCategory());
-            assertNull(pdpl.getRecipient());
-            assertEquals(1, pdpl.getIndividuals().size());
-            assertEquals("5", pdpl.getIndividuals().getFirst().getIdentifier());
-            assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, pdpl.getIndividuals().getFirst().getType());
+        PersonalDataProcessingLogDetails l0 = logs.get(0);
+        assertEquals("Get Draft Account - Defendant", l0.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, l0.getCategory());
+        assertEquals("1", l0.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l0.getCreatedBy().getType());
+        assertNull(l0.getIpAddress());
+        assertNull(l0.getRecipient());
+        assertEquals(1, l0.getIndividuals().size());
+        assertEquals("5", l0.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l0.getIndividuals().get(0).getType());
+        assertNotNull(l0.getCreatedAt());
 
-            assertNotNull(pdpl.getCreatedBy());
-            assertEquals("BUUID1", pdpl.getCreatedBy().getIdentifier());
-            assertEquals(PdplIdentifierType.OPAL_USER_ID, pdpl.getCreatedBy().getType());
+        PersonalDataProcessingLogDetails l1 = logs.get(1);
+        assertEquals("Update Draft Account - Parent or Guardian", l1.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l1.getCategory());
+        assertEquals("1", l1.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l1.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l1.getIpAddress());
+        assertNull(l1.getRecipient());
+        assertEquals(1, l1.getIndividuals().size());
+        assertEquals("5", l1.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l1.getIndividuals().get(0).getType());
+        assertNotNull(l1.getCreatedAt());
 
-            OffsetDateTime createdAt = pdpl.getCreatedAt();
-            assertNotNull(createdAt);
-            assertTrue(!createdAt.isBefore(before.minusSeconds(5)) && !createdAt.isAfter(after.plusSeconds(5)));
-        });
+        PersonalDataProcessingLogDetails l2 = logs.get(2);
+        assertEquals("Update Draft Account - Defendant", l2.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l2.getCategory());
+        assertEquals("1", l2.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l2.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l2.getIpAddress());
+        assertNull(l2.getRecipient());
+        assertEquals(1, l2.getIndividuals().size());
+        assertEquals("5", l2.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l2.getIndividuals().get(0).getType());
+        assertNotNull(l2.getCreatedAt());
+
     }
 
     @Test
@@ -589,6 +757,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(put(URL_BASE + "/5")
             .header("authorization", "Bearer some_value")
             .header("If-Match", ifMatch)
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validRequestBody));
         final OffsetDateTime after = OffsetDateTime.now();
@@ -598,31 +767,48 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
 
         ArgumentCaptor<PersonalDataProcessingLogDetails> captor = ArgumentCaptor.forClass(
             PersonalDataProcessingLogDetails.class);
-        verify(loggingService, times(2)).personalDataAccessLogAsync(captor.capture());
+        verify(loggingService, times(3)).personalDataAccessLogAsync(captor.capture());
 
-        List<PersonalDataProcessingLogDetails> calls = captor.getAllValues();
-        List<String> businessIdentifiers = calls.stream()
-            .map(PersonalDataProcessingLogDetails::getBusinessIdentifier)
-            .toList();
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Minor Creditor"));
-        assertTrue(businessIdentifiers.contains("Update Draft Account - Defendant"));
+        assertEquals(3, logs.size());
 
-        calls.forEach(pdpl -> {
-            assertEquals(PersonalDataProcessingCategory.COLLECTION, pdpl.getCategory());
-            assertNull(pdpl.getRecipient());
-            assertEquals(1, pdpl.getIndividuals().size());
-            assertEquals("5", pdpl.getIndividuals().getFirst().getIdentifier());
-            assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, pdpl.getIndividuals().getFirst().getType());
+        PersonalDataProcessingLogDetails first = logs.get(0);
+        assertEquals("Get Draft Account - Defendant", first.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.CONSULTATION, first.getCategory());
+        assertEquals("1", first.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, first.getCreatedBy().getType());
+        assertNull(first.getIpAddress());
+        assertNull(first.getRecipient());
+        assertEquals(1, first.getIndividuals().size());
+        assertEquals("5", first.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, first.getIndividuals().get(0).getType());
+        assertNotNull(first.getCreatedAt());
 
-            assertNotNull(pdpl.getCreatedBy());
-            assertEquals("BUUID1", pdpl.getCreatedBy().getIdentifier());
-            assertEquals(PdplIdentifierType.OPAL_USER_ID, pdpl.getCreatedBy().getType());
+        PersonalDataProcessingLogDetails second = logs.get(1);
+        assertEquals("Update Draft Account - Defendant", second.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, second.getCategory());
+        assertEquals("1", second.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, second.getCreatedBy().getType());
+        assertEquals("192.168.1.100", second.getIpAddress());
+        assertNull(second.getRecipient());
+        assertEquals(1, second.getIndividuals().size());
+        assertEquals("5", second.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, second.getIndividuals().get(0).getType());
+        assertNotNull(second.getCreatedAt());
 
-            OffsetDateTime createdAt = pdpl.getCreatedAt();
-            assertNotNull(createdAt);
-            assertTrue(!createdAt.isBefore(before.minusSeconds(5)) && !createdAt.isAfter(after.plusSeconds(5)));
-        });
+        PersonalDataProcessingLogDetails third = logs.get(2);
+        assertEquals("Update Draft Account - Minor Creditor", third.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, third.getCategory());
+        assertEquals("1", third.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, third.getCreatedBy().getType());
+        assertEquals("192.168.1.100", third.getIpAddress());
+        assertNull(third.getRecipient());
+        assertEquals(1, third.getIndividuals().size());
+        assertEquals("5", third.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, third.getIndividuals().get(0).getType());
+        assertNotNull(third.getCreatedAt());
+
     }
 
     private String validRawJsonCreateRequestBody() {
@@ -1125,6 +1311,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(post(URL_BASE)
             .header("authorization", "Bearer some_value")
             .header("If-Match", "0")
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validRequestBody));
 
@@ -1142,7 +1329,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         assertNotNull(pdpl);
 
         assertNotNull(pdpl.getCreatedBy());
-        assertEquals("BUUID1", pdpl.getCreatedBy().getIdentifier()); // adapt to your ParticipantIdentifier API
+        assertEquals("0", pdpl.getCreatedBy().getIdentifier()); // adapt to your ParticipantIdentifier API
 
         assertEquals("Submit Draft Account - Minor Creditor", pdpl.getBusinessIdentifier());
 
@@ -1268,6 +1455,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(patch(URL_BASE + "/" + draftIdAccount)
             .header("authorization", "Bearer some_value")
             .header("If-Match", "0")
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validUpdateRequestBody("65", "Publishing Pending", "X")));
 
@@ -1285,20 +1473,28 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         // For defendant-only we expect a single PDPL call (Re-submit Draft Account - Defendant)
         verify(loggingService, timeout(2000).times(1)).personalDataAccessLogAsync(captor.capture());
 
-        PersonalDataProcessingLogDetails pdpl = captor.getValue();
-        assertNotNull(pdpl);
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        // Full contents assertions (deterministic fields)
-        assertEquals("Re-submit Draft Account - Defendant", pdpl.getBusinessIdentifier());
-        assertEquals(PersonalDataProcessingCategory.COLLECTION, pdpl.getCategory());
-        assertNull(pdpl.getRecipient());
-        assertNotNull(pdpl.getCreatedAt());
-        assertNotNull(pdpl.getCreatedBy());
-        assertEquals(PdplIdentifierType.OPAL_USER_ID, pdpl.getCreatedBy().getType());
-        assertNotNull(pdpl.getIndividuals());
-        assertEquals(1, pdpl.getIndividuals().size());
-        assertEquals(Long.toString(draftIdAccount), pdpl.getIndividuals().getFirst().getIdentifier());
-        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, pdpl.getIndividuals().getFirst().getType());
+        assertEquals(1, logs.size());
+
+        PersonalDataProcessingLogDetails log = logs.get(0);
+
+        assertEquals("Re-submit Draft Account - Defendant", log.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, log.getCategory());
+
+        assertNotNull(log.getCreatedBy());
+        assertEquals("0", log.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, log.getCreatedBy().getType());
+
+        assertEquals("192.168.1.100", log.getIpAddress());
+
+        assertNull(log.getRecipient());
+
+        assertEquals(1, log.getIndividuals().size());
+        assertEquals("105", log.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, log.getIndividuals().get(0).getType());
+
+        assertNotNull(log.getCreatedAt());
     }
 
     @Test
@@ -1311,6 +1507,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(patch(URL_BASE + "/" + draftIdAccount)
             .header("authorization", "Bearer some_value")
             .header("If-Match", "0")
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validUpdateRequestBody("65", "Publishing Pending", "Y")));
 
@@ -1327,25 +1524,33 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
 
         // Expect two calls: Parent or Guardian, then Defendant
         verify(loggingService, timeout(2000).times(2)).personalDataAccessLogAsync(captor.capture());
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        List<PersonalDataProcessingLogDetails> calls = captor.getAllValues();
-        assertEquals(2, calls.size());
+        assertEquals(2, logs.size());
 
-        PersonalDataProcessingLogDetails first = calls.get(0);
-        assertNotNull(first);
-        assertEquals("Re-submit Draft Account - Parent or Guardian", first.getBusinessIdentifier());
-        assertEquals(PersonalDataProcessingCategory.COLLECTION, first.getCategory());
-        assertNull(first.getRecipient());
-        assertNotNull(first.getCreatedAt());
-        assertEquals(Long.toString(draftIdAccount), first.getIndividuals().getFirst().getIdentifier());
+        PersonalDataProcessingLogDetails l0 = logs.get(0);
+        assertEquals("Re-submit Draft Account - Parent or Guardian", l0.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l0.getCategory());
+        assertEquals("0", l0.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l0.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l0.getIpAddress());
+        assertNull(l0.getRecipient());
+        assertEquals(1, l0.getIndividuals().size());
+        assertEquals("104", l0.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l0.getIndividuals().get(0).getType());
+        assertNotNull(l0.getCreatedAt());
 
-        PersonalDataProcessingLogDetails second = calls.get(1);
-        assertNotNull(second);
-        assertEquals("Re-submit Draft Account - Defendant", second.getBusinessIdentifier());
-        assertEquals(PersonalDataProcessingCategory.COLLECTION, second.getCategory());
-        assertNull(second.getRecipient());
-        assertNotNull(second.getCreatedAt());
-        assertEquals(Long.toString(draftIdAccount), second.getIndividuals().getFirst().getIdentifier());
+        PersonalDataProcessingLogDetails l1 = logs.get(1);
+        assertEquals("Re-submit Draft Account - Defendant", l1.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l1.getCategory());
+        assertEquals("0", l1.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l1.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l1.getIpAddress());
+        assertNull(l1.getRecipient());
+        assertEquals(1, l1.getIndividuals().size());
+        assertEquals("104", l1.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l1.getIndividuals().get(0).getType());
+        assertNotNull(l1.getCreatedAt());
     }
 
     @Test
@@ -1358,6 +1563,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(patch(URL_BASE + "/" + draftIdAccount)
             .header("authorization", "Bearer some_value")
             .header("If-Match", "2")
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validUpdateRequestBody("65", "Publishing Pending", "A")));
 
@@ -1378,26 +1584,33 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         verify(loggingService, timeout(2000).times(2))
             .personalDataAccessLogAsync(captor.capture());
 
-        List<PersonalDataProcessingLogDetails> calls = captor.getAllValues();
-        assertEquals(2, calls.size(), "expected two PDPL log calls");
+        List<PersonalDataProcessingLogDetails> logs = captor.getAllValues();
 
-        // Defendant call
-        PersonalDataProcessingLogDetails defendantCall = calls.get(0);
-        assertNotNull(defendantCall);
-        assertEquals("Re-submit Draft Account - Defendant", defendantCall.getBusinessIdentifier());
-        assertEquals(PersonalDataProcessingCategory.COLLECTION, defendantCall.getCategory());
-        assertNull(defendantCall.getRecipient());
-        assertNotNull(defendantCall.getCreatedAt());
-        assertEquals(Long.toString(draftIdAccount), defendantCall.getIndividuals().getFirst().getIdentifier());
+        assertEquals(2, logs.size());
 
-        // Minor Creditor call
-        PersonalDataProcessingLogDetails minorCall = calls.get(1);
-        assertNotNull(minorCall);
-        assertEquals("Re-submit Draft Account - Minor Creditor", minorCall.getBusinessIdentifier());
-        assertEquals(PersonalDataProcessingCategory.COLLECTION, minorCall.getCategory());
-        assertNull(minorCall.getRecipient());
-        assertNotNull(minorCall.getCreatedAt());
-        assertEquals(Long.toString(draftIdAccount), minorCall.getIndividuals().getFirst().getIdentifier());
+        PersonalDataProcessingLogDetails l0 = logs.get(0);
+        assertEquals("Re-submit Draft Account - Defendant", l0.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l0.getCategory());
+        assertEquals("0", l0.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l0.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l0.getIpAddress());
+        assertNull(l0.getRecipient());
+        assertEquals(1, l0.getIndividuals().size());
+        assertEquals("8", l0.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l0.getIndividuals().get(0).getType());
+        assertNotNull(l0.getCreatedAt());
+
+        PersonalDataProcessingLogDetails l1 = logs.get(1);
+        assertEquals("Re-submit Draft Account - Minor Creditor", l1.getBusinessIdentifier());
+        assertEquals(PersonalDataProcessingCategory.COLLECTION, l1.getCategory());
+        assertEquals("0", l1.getCreatedBy().getIdentifier());
+        assertEquals(PdplIdentifierType.OPAL_USER_ID, l1.getCreatedBy().getType());
+        assertEquals("192.168.1.100", l1.getIpAddress());
+        assertNull(l1.getRecipient());
+        assertEquals(1, l1.getIndividuals().size());
+        assertEquals("8", l1.getIndividuals().get(0).getIdentifier());
+        assertEquals(PdplIdentifierType.DRAFT_ACCOUNT, l1.getIndividuals().get(0).getType());
+        assertNotNull(l1.getCreatedAt());
     }
 
     @Test
@@ -1410,6 +1623,7 @@ class DraftAccountControllerIntegrationTest extends AbstractIntegrationTest {
         ResultActions resultActions = mockMvc.perform(patch(URL_BASE + "/" + draftAccountId)
             .header("authorization", "Bearer some_value")
             .header("If-Match", "0")
+            .header("X-User-IP", "192.168.1.100")
             .contentType(MediaType.APPLICATION_JSON)
             .content(validUpdateRequestBody("65", "Publishing Pending", "B")));
 
